--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 aiohttp = "^3.10.10"
-sqlalchemy = "^2.0.36"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
+fastapi = "^0.115.4"
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
+pydantic = "^2.9.2"
+aiosqlite = "^0.20.0"
+pydantic-settings = "^2.6.1"
 
 
 [build-system]
