--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ uvicorn = {extras = ["standard"], version = "^0.32.0"}
 pydantic = "^2.9.2"
 aiosqlite = "^0.20.0"
 pydantic-settings = "^2.6.1"
+asyncpg = "^0.30.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
